--- a/Evolution/MonitorConfigurations.cnf
+++ b/Evolution/MonitorConfigurations.cnf
@@ -27,3 +27,18 @@ MonitorConfiguration  "WindowConfiguration3.cnf"
 0    # secondary monitor
 0   # end of MonitorConfiguration
 
+MonitorConfiguration  "WindowConfiguration4.cnf"
+1   # monitor number
+   0   0   2560 1440    # monitor rectangle
+   0   0   2560 1400    # work area rectangle
+1    # primary monitor
+2   # monitor number
+ 3840 1068   6400 2148    # monitor rectangle
+ 3840 1068   6400 2108    # work area rectangle
+0    # secondary monitor
+3   # monitor number
+ -1920 1078     0 2158    # monitor rectangle
+ -1920 1078     0 2118    # work area rectangle
+0    # secondary monitor
+0   # end of MonitorConfiguration
+
