--- a/Evolution/WindowConfiguration5.cnf
+++ b/Evolution/WindowConfiguration5.cnf
@@ -2,15 +2,15 @@ MoveWindow IDM_MAIN_WINDOW 3840 1111 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1060 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_DISP_WINDOW 6137 1272 211 219
-ShowWindow IDM_DISP_WINDOW SW_HIDE
-MoveWindow IDM_EDIT_WINDOW 6142 1494 211 559
+MoveWindow IDM_DISP_WINDOW 5969 1834 211 219
+ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_EDIT_WINDOW 6177 1493 211 559
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW 3930 1407 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3835 1601 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 3860 600 300 150
+MoveWindow IDM_PERF_WINDOW 3860 600 400 430
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 6074 1114 216 139
+MoveWindow IDM_MINI_WINDOW 5945 1143 416 239
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
