--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayFunctor.h" />
+    <ClInclude Include="pixelPoint.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
