--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -142,8 +142,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayFunctor.h" />
+    <ClInclude Include="kGridPoint.h" />
     <ClInclude Include="pixelPoint.h" />
     <ClInclude Include="random.h" />
+    <ClInclude Include="SmoothMove.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="trace.h" />
@@ -151,7 +153,9 @@
     <ClInclude Include="XArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="kGridPoint.cpp" />
     <ClCompile Include="random.cpp" />
+    <ClCompile Include="SmoothMove.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
