--- a/Evolution/test_3.in
+++ b/Evolution/test_3.in
@@ -1,6 +1,7 @@
 OpenTraceFile  "main_trace.out"
 PostRefresh
 PostSetBrushMode tBrushMode::randomStrategy
+PostReset
 PostDoEdit   37  51 
 PostRefresh
 PostDoEdit   50  52 
@@ -21,29 +22,8 @@ PostDoEdit  147  52
 PostRefresh
 PostDoEdit  165  52 
 PostRefresh
+PostReset
 PostPrevGeneration
-PostGotoGeneration  20
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  19
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  18
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  17
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  16
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  15
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  14
-PostGenerationStep
-PostPrevGeneration
-PostGotoGeneration  13
 PostGenerationStep
 PostPrevGeneration
 PostGotoGeneration  12
